<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_live_news"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/text_schedules"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_music"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_audiotrack_white_24dp"-->
        <!--android:title="@string/text_music"-->
        <!--app:showAsAction="ifRoom" />-->
</menu>