...
            android:id="@+id/published_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/unbookmarked" />

...
